--- a/src/posts/blog/machineLearning/scikit-learn course/M1.02_ fitting a scikit-learn model on numerical data.md
+++ b/src/posts/blog/machineLearning/scikit-learn course/M1.02_ fitting a scikit-learn model on numerical data.md
@@ -1,7 +1,7 @@
 ---
-title: "M1.02_ fitting a scikit-learn model on numerical data"
+title: "1.2 fitting a scikit-learn model on numerical data"
 category: "MachineLearning"
-date: "2021-05-01"
+date: "2022-04-01"
 thumbnail: "./images/scikit-learn-logo.png"
 ---
 
