--- a/src/posts/blog/machineLearning/scikit-learn course/M1.03_ Handling categorical data .md
+++ b/src/posts/blog/machineLearning/scikit-learn course/M1.03_ Handling categorical data .md
@@ -1,7 +1,7 @@
 ---
-title: "M1.03_ Handling categorical data"
+title: "1.3 Handling categorical data"
 category: "MachineLearning"
-date: "2021-05-01"
+date: "2022-04-02"
 thumbnail: "./images/scikit-learn-logo.png"
 ---
 
