--- a/src/posts/blog/Business and DataScience/0.비지니스와 데이터 과학.md
+++ b/src/posts/blog/Business and DataScience/0.비지니스와 데이터 과학.md
@@ -1,6 +1,6 @@
 ---
 title: "Business Problems and Data Science Solutions"
-category: "business & DataScience"
+category: "business & DS"
 date: "2022-02-11"
 thumbnail: "./images/dataScience.png"
 ---
