--- a/src/posts/blog/Business and DataScience/1.Lean Analytics.md
+++ b/src/posts/blog/Business and DataScience/1.Lean Analytics.md
@@ -1,6 +1,6 @@
 ---
 title: "Lean Analytics 정리"
-category: "business & DataScience"
+category: "business & DS"
 date: "2022-02-11"
 thumbnail: "./images/lean.png"
 alt: "test"
