--- a/src/posts/blog/Bussiness/0.비즈니스와 데이터 과학.md
+++ b/src/posts/blog/Bussiness/0.비즈니스와 데이터 과학.md
@@ -1,6 +1,6 @@
 ---
 title: "Business Problems and Data Science Solutions"
-category: "business & DS"
+category: "business"
 date: "2022-02-11"
 thumbnail: "./images/dataScience.png"
 ---
@@ -11,7 +11,7 @@ thumbnail: "./images/dataScience.png"
 
 기업은 항상 문제에 직면해있다. 작년보다 매출이 줄었을수도 있고, 몇 달 간 꾸준히 증가하던 신규 이용자 유입률이 완만하게 증가한다던가, 매출이 증가했지만 순이익은 거의 늘어나지 않는 문제를 해결해야한다. 이 문제를 해결하기 위해서 데이터가 필요하다. 과거의 기록을 보며 발생한 문제의 근본적인 이유를 파악하고 그로 인해 좋은 해결 방안을 찾을 수 있다. 종종 문제를 해결하기 위한 분석에서 새로운 문제를 식별할 수도 있다. 한 걸음 더 나아가, 데이터 분석을 통해 기업의 상황을 미리 예측하여 실제로 그런 결과가 발생하지 않도록 초기에 예방할 수도 있다.
 
-이처럼 데이터는 기업이 직면한 문제를 해결하기 위해서, 새로운 문제를 식별하기 위해서, 미래에 일어날 일을 예상하고 예방하기 위해서 활용 된다. 데이터 활용은 기업윤영에 있어 시작점이 될 수도, 종결점이 될 수도 있다. 따라서 기업에서 이를 담당하는 데이터 분석가는 비지니스를 깊게 이해하고 조직 구성원에게 나아갈 방향을 제시하는 역할을 수행한다.
+이처럼 데이터는 기업이 직면한 문제를 해결하기 위해서, 새로운 문제를 식별하기 위해서, 미래에 일어날 일을 예상하고 예방하기 위해서 활용 된다. 데이터 활용은 기업윤영에 있어 시작점이 될 수도, 종결점이 될 수도 있다. 따라서 기업에서 이를 담당하는 데이터 분석가는 비즈니스를 깊게 이해하고 조직 구성원에게 나아갈 방향을 제시하는 역할을 수행한다.
 
 그렇기에 데이터 분석가는 구성원들이 공유되는 목표의식을 갖을 수 있도록 객관적인 기준을 수립해야한다.
 
@@ -56,4 +56,4 @@ thumbnail: "./images/dataScience.png"
 - Causal modeling
   인과관계를 찾는 방법임. 상당히 중요하기에 Data Mining에서 필수적으로 적용되어야 함. A/B Test와 같이 Conterfactual analysis 방법을 사용해서 인과성을 밝혀내야함.
 
-## 데이터 마이닝은 기법일 뿐 비지니스를 먼저 생각해야한다.
+## 데이터 마이닝은 기법일 뿐 비즈니스를 우선 생각해야한다.
